# StudyFile

StudyFile/GitStudy/: ReadMe.md  main  main.c
StudyFile/LinuxCCmakeStudy/: CMakeLists.txt  clean_build.sh  cmake_clean.cmake  main.c
StudyFile/LinuxCCmakeStudy/src/: CMakeLists.txt  Makefile  cmake_install.cmake  item.c
StudyFile/LinuxCCmakeStudy/src/base/: Makefile  base_typedef.h  cmake_install.cmake
StudyFile/LinuxCCmakeStudy/src/function/: CMakeLists.txt  Makefile  cmake_install.cmake
StudyFile/LinuxCCmakeStudy/src/function/func/: CMakeLists.txt  Makefile  cmake_install.cmake  func_array.c  func_array.h  func_main.c  func_main.h  singal.c  singal.h
StudyFile/LinuxCCmakeStudy/src/function/tmp_test/: Makefile  cmake_install.cmake
